# simpletest

./: CMakeLists.txt  README.md  execute.sh
so1/: CMakeLists.txt  myhashmap.hpp  mystring.cc  mystring.h
test/: CMakeLists.txt  test.cc
