CMAKE_MINIMUM_REQUIRED(VERSION 3.21.1)
PROJECT(SO1ONLY)

SET(CMAKE_VERBOSE_MAKEFILE ON)
ADD_DEFINITIONS("-O0 -g -ggdb -Wno-unused-variable")
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_CXX_STANDARD 17)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/so1)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/test)





